--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* index.css or tailwind.css */
+.Toastify__toast {
+  @apply bg-dark-800 text-white text-sm border border-dark-500 rounded-md shadow-md px-4 py-3;
+}
+
+.Toastify__toast--success {
+  @apply border-green-500;
+}
+
+.Toastify__toast--error {
+  @apply border-red-500;
+}
+
+.Toastify__progress-bar {
+  @apply bg-primary-500;
+}
